Removed spring-batch 🎉